feat: implementation FindByName in PersonController JSON, XML and YAML tests